# nsca-ng

./: .coverity.yml  .gitignore  .travis.yml  AUTHORS  COPYING  Makefile.am  NEWS  PROTOCOL  README  THANKS  TODO  autogen.sh  configure.ac  nsca-ng.spec
.github/workflows/: ci.yml
build-aux/: Makefile.am  clang-analyze  generate-change-log  make-confuse  make-openssl  man2ps
contrib/: Makefile.am  README  acknowledge  debug_server  disable_notifications  downtime  enable_notifications  invoke_check  nsca-ng.init
debian/: changelog  control  copyright  nsca-ng-client.examples  nsca-ng-client.install  nsca-ng-client.manpages  nsca-ng-server.init  nsca-ng-server.install  nsca-ng-server.manpages  rules
etc/: Makefile.am  nsca-ng.cfg  nsca-ng.conf  nsca-ng.service  nsca-ng.socket  send_nsca.cfg  send_nsca.conf  valgrind.supp
lib/: Makefile.am  daemon.c  progname.c  strcasecmp.c  strdup.c  strncasecmp.c  system.h  wrappers.c  wrappers.h  xprintf.c
lib/ev/: Makefile.am
lib/pidfile/: Makefile.am  flock.c  flopen.c  libutil.h  pidfile.c
m4/: aio.m4  confuse.m4  daemon.m4  ev.m4  networking.m4  openssl.m4  pidfile.m4  progname.m4  systemd.m4  xprintf.m4
man/: Makefile.am  nsca-ng.cfg.in  nsca-ng.conf.in  nsca-ng.in  send_nsca.cfg.in  send_nsca.conf.in  send_nsca.in
perl/: .gitignore  Changes  Client.xs  MANIFEST  Makefile.PL  Makefile.am  README  client.c  client.h  ppport.h  typemap
perl/lib/Net/NSCAng/: Client.pm
perl/t/: 001_load.t  Net-NSCAng-Client.t  manifest.t  pod.t
python/: Makefile.am  PKG-INFO  README  client.c  client.h  nscang.c  setup.py
src/: Makefile.am
src/client/: Makefile.am  auth.c  auth.h  client.c  client.h  conf.c  conf.h  input.c  input.h  parse.c  parse.h  send_nsca.c  send_nsca.h
src/common/: Makefile.am  buffer.c  buffer.h  log.c  log.h  tls.c  tls.h  util.c  util.h
src/python/: client.c  setup.py
src/server/: Makefile.am  auth.c  auth.h  conf.c  conf.h  fifo.c  fifo.h  hash.c  hash.h  nsca-ng.c  server.c  server.h
tests/: Makefile.am  atlocal.in  auth.at  basic.at  input.at  local.at  test_nsca.c  testsuite.at
